<resources>
    <string name="app_name">Sabilab</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="usuarios">Usuarios</string>
    <string name="aprovisionamiento">Aprovisionamiento</string>
    <string name="clientes">Clientes</string>
    <string name="vendedores">Vendedores</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorias</string>
    <string name="proveedores">Proveedores</string>
    <string name="reportes">Reportes</string>
    <string name="logout">Logout</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="agregar_aprovisionamiento">Nueva Compra</string>
    <string name="buscar">Buscar</string>
    <string name="proveedor">PROVEEDOR</string>
    <string name="cantidad2">CANTIDAD</string>
    <string name="fecha2">FECHA</string>
    <string name="title_activity_compras">ComprasActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="usuario">usuario</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="rol">rol</string>
    <string name="usuario2">USUARIO</string>
    <string name="rol2">ROL</string>
    <string name="opciones">OPCIONES</string>
    <string name="producto">Producto</string>
    <string name="producto2">PRODUCTO</string>
    <string name="precio2">PRECIO</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar_usuario">Actualizar Usuario</string>
    <string name="confirmaci_n">Confirmación</string>
    <string name="context_confirm">¿Seguro que quieres eliminar al usuario admin?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="categoria_speach">Formulación y preparación de medicamentos según principios farmacéuticos, incluyendo ingredientes, dosificación y formas de administración.</string>
    <string name="registrar_categoria">Registrar Categoría</string>
    <string name="tipo">TIPO</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="categor_as">Categorías</string>
    <string name="nueva_categoria">Nueva Categoria</string>
    <string name="proveedores_speach1">20403553201</string>
    <string name="proveedores_speach2">BOTIFARMA SALUD SOCIEDAD ANONIMA CERRADA</string>
    <string name="proveedores_speach3">Botifarma</string>
    <string name="proveedores_speach4">960147987</string>
    <string name="proveedores_speach5">grupodialexfactura@hotmail.com</string>
    <string name="registrar_proveedor">Registrar Proveedor</string>
    <string name="ruc">RUC</string>
    <string name="razon_social">RAZON SOCIAL</string>
    <string name="nombre_contacto">NOMBRE CONTACTO</string>
    <string name="telefono">TELEFONO</string>
    <string name="correo">CORREO</string>
    <string name="nuevo_proveedor">Nuevo Proveedor</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="productos_upper">PRODUCTOS</string>
    <string name="laboratorio">LABORATORIO</string>
    <string name="precio">PRECIO</string>
    <string name="lote">LOTE</string>
    <string name="fecha_caducidad">FECHA CADUCIDAD</string>
    <string name="productos_speach1">3-GEL SUSPENSIÓN ORAL X 20 SOBRES</string>
    <string name="productos_speach2">DRGP</string>
    <string name="productos_speach3">19.80</string>
    <string name="productos_speach4">Lote VLL1</string>
    <string name="productos_speach5">2024-10-19</string>
    <string name="productos_speach6">Medicina</string>
    <string name="categoria">CATEGORIA</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="nombre">NOMBRE</string>
    <string name="caducidad">CADUCIDAD</string>
    <string name="pedidos">Pedidos</string>
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="nombre_comercial">NOMBRE COMERCIAL</string>
    <string name="direccion">DIRECCION</string>
    <string name="distrito">DISTRITO</string>
    <string name="contacto">CONTACTO</string>
    <string name="clientes_speach1">10405225919</string>
    <string name="clientes_speach2">GONZALES ABAD ELSA MARIBEL</string>
    <string name="clientes_speach3">BOTICA ELSYFARMA</string>
    <string name="clientes_speach4">AV CESAR VALLEJO 1479 URB TAYACAJA</string>
    <string name="clientes_speach5">EL AGUSTINO</string>
    <string name="clientes_speach6">CINTHIA</string>
    <string name="clientes_speach7">915224830</string>
    <string name="registrar_cliente">Registrar Cliente</string>
    <string name="direccion_1">DIRECCION 1</string>
    <string name="direccion_2">DIRECCION 2</string>
    <string name="telefono_empresa">TELEFONO EMP.</string>
    <string name="telefono_2">TELEFONO 2</string>
    <string name="telefono_1">TELEFONO 1</string>
    <string name="provincia">PROVINCIA</string>
    <string name="escoger_vendedor">ESCOGER VENDEDOR</string>
    <string name="nuevo_vendedor">Nuevo Vendedor</string>
    <string name="fecha_nacimiento">FECHA NACIMIENTO</string>
    <string name="vendedores_speach1">birzavit Alvarez</string>
    <string name="vendedores_speach2">birzavit</string>
    <string name="vendedores_speach3">Birzavit@sabilab.com</string>
    <string name="vendedores_speach4">Norte</string>
    <string name="vendedores_speach5">928343202</string>
    <string name="vendedores_speach6">1995-12-25</string>
    <string name="registrar_vendedor">Registrar Vendedor</string>
    <string name="pedidos_speach1">125</string>
    <string name="pedidos_speach2">BOTICA ELSYFARMA</string>
    <string name="pedidos_speach3">AV CESAR VALLEJO 1479 URB TAYACAJA</string>
    <string name="pedidos_speach4">EL AGUSTINO</string>
    <string name="pedidos_speach5">2023-11-05</string>
    <string name="pedidos_speach6">2023-11-05</string>
    <string name="pedidos_speach7">114.2</string>
    <string name="nuevo_pedido">Nuevo Pedido</string>
    <string name="nro">NRO</string>
    <string name="cliente">CLIENTE</string>
    <string name="fecha_pedido">FECHA PEDIDO</string>
    <string name="fecha_entrega">FECHA ENTREGA</string>
    <string name="total">TOTAL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar2">CANCELAR</string>
    <string name="seleccionar_cliente">Seleccionar Cliente</string>
    <string name="buscador">BUSCADOR</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="datos_de_env_o">Datos de envío</string>
    <string name="siguiente">Siguiente</string>
    <string name="productos_seleccionados">Productos Seleccionados</string>
    <string name="agregar_productos">Agregar Productos</string>
    <string name="total_s_39_6">0</string>
    <string name="regresar">REGRESAR</string>
    <string name="cancelar_">CANCELAR</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="_2">2</string>
    <string name="_39_6">39.6</string>
    <string name="cantidad_producto">Cantidad Producto</string>
    <string name="seleccionar2">SELECCIONAR</string>
    <string name="total_s">Total: S/</string>
    <string name="nueva_compra">Nueva compra</string>
    <string name="cantidad_numero">50</string>
    <string name="escoger">ESCOGER</string>
    <string name="fecha_llegada">FECHA LLEGADA</string>
    <string name="objetivo">OBJETIVO</string>
    <string name="obtenido">OBTENIDO</string>
    <string name="cantidad_solicitada">CANTIDAD SOLICITADA</string>
    <string name="margen_ganancia">Margen Ganancia</string>
    <string name="generar_pdf">Generar PDF</string>
    <string name="prec_uni">PREC. UNI</string>
    <string name="total_compra">TOTAL COMPRA</string>
    <string name="total_venta">TOTAL VENTA</string>
    <string name="sabilab">SABILAB</string>
    <string name="vendedor2">VENDEDOR</string>
</resources>