<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPedidos2Padre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="1300dp"
        android:layout_height="70dp"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:id="@+id/tvNroPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach1"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvClientePedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach2"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDireccionPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach3"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDistritoPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach4"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaPedidoPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach5"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaEntregaPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach6"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTotalPedidos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos_speach7"
            android:textColor="@color/text"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_color" />
</LinearLayout>
