<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemProductos2Padre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="1500dp"
        android:layout_height="70dp"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:id="@+id/tvRucClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach1"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRazonSocialClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach2"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNombreComercialClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach3"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDireccionClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach4"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDistritoClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach5"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvContactoClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach6"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTelefonoClientes2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clientes_speach7"
            android:textColor="@color/text"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_color" />
</LinearLayout>
