<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemProductos2Padre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="1100dp"
        android:layout_height="70dp"
        android:background="@color/background_color"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/tvNombreProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach1"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLaboratorioProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach2"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPrecioProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach3"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLoteProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach4"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaCaducidadProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach5"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCategoriaProductos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/productos_speach6"
            android:textColor="@color/text"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_color" />
</LinearLayout>
