<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:text="@string/confirmaci_n"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvConfirmMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:text="@string/context_confirm"
        android:textSize="18sp"
        android:layout_marginTop="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmCancelar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:backgroundTint="@color/error_color"/>

        <Button
            android:id="@+id/btnConfirmConfirmar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:textStyle="bold"
            android:backgroundTint="@color/primary_color"/>

    </LinearLayout>



</LinearLayout>