<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddVendedoresTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:text="@string/registrar_vendedor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ibAddVendedoresClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/ic_rounded_red_vector" />

    </LinearLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:background="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresNombre"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textAutoComplete"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresCorreo"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/correo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresDireccion"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/direccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresFechaNacimiento"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/fecha_nacimiento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:singleLine="true"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresTelefono1"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/telefono_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresTelefono1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresTelefono2"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/telefono_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAddVendedoresTelefono2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddVendedoresUsuarios"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/categoria">

        <Spinner
            android:id="@+id/spAddVendedoresUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddVendedoresGuardar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/guardar"
        android:textSize="18sp"
        android:textStyle="bold" />




</LinearLayout>